--- a/HW3N/HW3N.Android/HW3N.Android.csproj
+++ b/HW3N/HW3N.Android/HW3N.Android.csproj
@@ -72,6 +72,9 @@
     <PackageReference Include="Polly">
       <Version>7.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Forms">
+      <Version>7.2.0.1422</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.6.292</Version>
     </PackageReference>
