--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Prism.Forms" Version="7.2.0.1422" />
   </ItemGroup>
 
   <ItemGroup>
